--- a/frontend/react/index.html
+++ b/frontend/react/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0" />
     <title>Tic Tac Toe</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="inset: 0;"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
